--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
+<meta property="og:locale" content="en_US">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Games">
+<meta property="og:description" content="Games from GirlOrBoy">
+<meta property="og:url" content="https://clickergamehtml-1.girlorboy.repl.co">
+<meta property="og:site_name" content="GirlOrBoy#5637">
+<meta property="og:image" content="https://media.discordapp.net/attachments/919967655899852821/920649462802677780/20211215_181201.png">
+<meta property="og:image:width" content="1280">
+<meta property="og:image:height" content="720">
+<html class="no-js" lang="en">
 <html>
   <head>
     <meta charset="utf-8">
