--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <meta property="og:locale" content="en_US">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Games">
-<meta property="og:description" content="Games from GirlOrBoy">
+<meta property="og:description" content="Clicker">
 <meta property="og:url" content="https://clickergamehtml-1.girlorboy.repl.co">
-<meta property="og:site_name" content="GirlOrBoy#5637">
+<meta property="og:site_name" content="Mega Super Clicker">
 <meta property="og:image" content="https://media.discordapp.net/attachments/919967655899852821/920649462802677780/20211215_181201.png">
 <meta property="og:image:width" content="1280">
 <meta property="og:image:height" content="720">
@@ -13,7 +13,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Click Spammer</title>
+    <title>Clicker</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
@@ -22,7 +22,7 @@
 				<h1>Upgrades</h1>
 				<div class='bulk-purchase-wrapper'>
 					<label for='amount'>Purchase Amount</label>
-					<select name='amount' id='amount'>
+					<select class="select" name='amount' id='amount'>
 						<option value='1'>1</option>
 						<option value='10'>10</option>
 						<option value='25'>25</option>
@@ -291,7 +291,7 @@
 					</div>
 
 					<div class='upgrade' id='u-seventeen' onclick='upgrade(10000000,-1500000,-1500000)'>
-						<h3 class='title'>BrainF Dev</h3>
+						<h3 class='title'>MrBeast</h3>
 						<p class='cost'>Cost: <span class='cost-value'>10,000,000</span></p>
 						<table class='upgrade-stats'>
 							<tr>
@@ -303,7 +303,7 @@
 								<td><span class='negative'>-1500000</span></td>
 							</tr>
 						</table>
-						<p class='description'>Would you like to instantly lose 100000000000 brain cells? Code in BrainF</p>
+						<p class='description'>Would you like to instantly lose 100000000000 brain cells?</p>
 					</div>
 				</div>
 				<button onclick='closeUpgrades()' class='bigger-button'>Close</button>
